--- a/app/assets/stylesheets/blog.css
+++ b/app/assets/stylesheets/blog.css
@@ -1,3 +1,10 @@
+.navi6 {
+    display: inline;
+    float: right;
+    /* margin-right: 14px; */
+    padding-right: 10px;
+}
+
 body {
     margin-top: 2px !important;
 }
